unpackaged/main/default/objects/User/fields/Adj_ATV__c.field-meta.xml
<CustomField>
    <fullName>Adj_ATV__c</fullName>
    <label>Adj. ATV</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>