unpackaged/main/default/objects/User/fields/Adj_Forms__c.field-meta.xml
<CustomField>
    <fullName>Adj_Forms__c</fullName>
    <label>Adj. Forms</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>