unpackaged/main/default/objects/User/fields/Adj_SiS__c.field-meta.xml
<CustomField>
    <fullName>Adj_SiS__c</fullName>
    <label>Adj. SiS</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>