unpackaged/main/default/objects/User/fields/bi_owner__c.field-meta.xml
<CustomField>
    <fullName>bi_owner__c</fullName>
    <label>BI Owner</label>
    <relationshipName>Users1</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>