unpackaged/main/default/objects/User/fields/Competitor_Shop_Win_Target__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Shop_Win_Target__c</fullName>
    <label>Competitor Shop Win Target</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>