unpackaged/main/default/objects/User/fields/DCC_Referral_Target__c.field-meta.xml
<CustomField>
    <fullName>DCC_Referral_Target__c</fullName>
    <label>DCC Referral Target</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>