unpackaged/main/default/objects/User/fields/Inflation_Increase_Target__c.field-meta.xml
<CustomField>
    <fullName>Inflation_Increase_Target__c</fullName>
    <label>Inflation Increase Target</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>