unpackaged/main/default/objects/User/fields/LyncId__c.field-meta.xml
<CustomField>
    <fullName>LyncId__c</fullName>
    <label>LyncId</label>
    <length>160</length>
    <type>Text</type>
</CustomField>