unpackaged/main/default/objects/User/fields/Number_of_Users__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Users__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>