unpackaged/main/default/objects/User/fields/Opportunity_Approver__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Approver__c</fullName>
    <label>Opportunity Approver</label>
    <relationshipName>User</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>