unpackaged/main/default/objects/User/fields/parent_account_plan_owner__c.field-meta.xml
<CustomField>
    <fullName>parent_account_plan_owner__c</fullName>
    <label>Parent Account Plan Owner</label>
    <relationshipName>Users</relationshipName>
    <restrictedAdminField>true</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>