unpackaged/main/default/objects/User/fields/Sales_Target_NC__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target_NC__c</fullName>
    <label>Sales Target (NC)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>