unpackaged/main/default/objects/User/fields/Signature_2__c.field-meta.xml
<CustomField>
    <fullName>Signature_2__c</fullName>
    <label>Signature 2</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>