unpackaged/main/default/objects/User/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Signature</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>