unpackaged/main/default/objects/User/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn Team Angela</fullName>
            </value>
            <value>
                <fullName>LinkedIn Team Claudia</fullName>
            </value>
            <value>
                <fullName>LinkedIn Team Nathalie</fullName>
            </value>
            <value>
                <fullName>LinkedIn Team Rebekka</fullName>
            </value>
            <value>
                <fullName>LinkedIn Team Stuart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>