unpackaged/main/default/objects/User/fields/TF_Referral_Target__c.field-meta.xml
<CustomField>
    <fullName>TF_Referral_Target__c</fullName>
    <label>TF Referral Target</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>