unpackaged/main/default/objects/User/fields/Top_20_Target__c.field-meta.xml
<CustomField>
    <fullName>Top_20_Target__c</fullName>
    <label>Top 20 Target</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>