unpackaged/main/default/objects/User/fields/User_IDx18__c.field-meta.xml
<CustomField>
    <fullName>User_IDx18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User IDx18</label>
    <type>Text</type>
</CustomField>