unpackaged/main/default/objects/User/fields/User_Lync_Status__c.field-meta.xml
<CustomField>
    <fullName>User_Lync_Status__c</fullName>
    <label>User Lync Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>