unpackaged/main/default/objects/User/listViews/AllUsers.listView-meta.xml
<ListView>
    <fullName>AllUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>MANAGER</columns>
    <columns>Opportunity_Approver__c</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CREATED_DATE</columns>
    <columns>HAS_AUTHENTICATOR</columns>
    <columns>HAS_TOTP</columns>
    <filterScope>Everything</filterScope>
    <label>All Users</label>
    <language>en_US</language>
</ListView>