unpackaged/main/default/objects/User/listViews/Protel_Users.listView-meta.xml
<ListView>
    <fullName>Protel_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.COMPANY_NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>MANAGER</columns>
    <columns>Opportunity_Approver__c</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.COUNTRY_CODE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.COMPANY_NAME</field>
        <operation>equals</operation>
        <value>Protel</value>
    </filters>
    <label>Protel Users</label>
    <language>en_US</language>
</ListView>